--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "noImplicitAny": true
+  },
   "files": [
     "index.d.ts",
-    "typings/main.d.ts"
+    "typings/index.d.ts"
   ]
 }
