--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "typings": "index.d.ts",
   "scripts": {
     "lint": "tslint \"**/*.ts\" -e \"node_modules/**\" -e \"typings/**\" -e bundle.d.ts",
-    "bundle": "typings bundle -o bundle.d.ts"
+    "bundle": "typings bundle -o bundle.d.ts",
+    "exec": "ts-node test.ts",
+    "test": "npm run lint && npm run bundle && npm run exec"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "homepage": "https://github.com/mainnika/npm-jayson#readme",
   "devDependencies": {
     "jayson": "^2.0.2",
+    "ts-node": "^2.1.0",
     "tslint": "^4.4.2",
     "tslint-config-typings": "^0.3.1",
     "typescript": "^2.1.6",
