--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "tslint \"**/*.ts\" -e \"node_modules/**\" -e \"typings/**\" -e bundle.d.ts",
     "bundle": "typings bundle -o bundle.d.ts",
     "exec": "ts-node test.ts",
-    "test": "npm run lint && npm run bundle && npm run exec"
+    "test": "npm run lint && npm run bundle && npm run exec",
+    "prepublish": "typings install",
+    "postpublish": "greenkeeper-postpublish"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,8 @@
   },
   "homepage": "https://github.com/mainnika/npm-jayson#readme",
   "devDependencies": {
-    "jayson": "^2.0.2",
+    "greenkeeper-postpublish": "^1.0.1",
+    "jayson": "~2.0.2",
     "ts-node": "^2.1.0",
     "tslint": "^4.4.2",
     "tslint-config-typings": "^0.3.1",
