--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "tslint-config-typings": "^0.3.1",
     "typescript": "^2.1.6",
     "typings": "^2.1.0"
+  },
+  "dependencies": {
+    "@types/node": "^7.0.12"
   }
 }
