--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   },
   "homepage": "https://github.com/mainnika/npm-jayson#readme",
   "devDependencies": {
-    "greenkeeper-postpublish": "^1.0.1",
-    "jayson": "~2.0.2",
-    "ts-node": "^2.1.0",
-    "tslint": "^4.4.2",
+    "greenkeeper-postpublish": "^1.3.0",
+    "jayson": "^2.0.3",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.5.0",
     "tslint-config-typings": "^0.3.1",
-    "typescript": "^2.1.6",
-    "typings": "^2.1.0"
+    "typescript": "^2.4.2",
+    "typings": "^2.1.1"
   },
   "dependencies": {
-    "@types/node": "^7.0.12"
+    "@types/node": "^8.0.18"
   }
 }
