--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
     "noImplicitAny": true
   },
   "files": [
-    "index.d.ts",
-    "typings/index.d.ts"
+    "index.d.ts"
   ]
 }
